# rustcrypto_fv

./: .gitignore  flake.nix
hashes/: Cargo.toml
hashes/sha2/: Cargo.toml  Makefile  README.md
hashes/sha2/proofs/fstar/: Help.SHA256.fst  Spec.SHA256.fst  hax.fst.config.json
hashes/sha2/src/: consts.rs  lib.rs  sha256.rs  sha512.rs
hashes/sha2/src/sha256/: aarch64_sha2.rs  soft_compact.rs  x86_shani.rs
hashes/sha2/src/sha512/: aarch64_sha2.rs
hashes/sha2/tests/: mod.rs
