[package]
name = "sha2"
version = "0.11.0-rc.5"
description = """
Pure Rust implementation of the SHA-2 hash function family
including SHA-224, SHA-256, SHA-384, and SHA-512.
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/sha2"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["sha2", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
cfg-if = "1"

[target.'cfg(hax)'.dependencies]
hax-lib = { git = "https://github.com/cryspen/hax", tag = "hax-lib-v0.3.5" }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.3"

[dev-dependencies]
hex-literal = "1"

[features]
default = ["sha256", "sha512"]
sha256 = []
sha256_224 = []
sha512 = []
sha512_224 = []
sha512_256 = []
sha512_384 = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(sha2_backend, values("soft-compact"))',
    'cfg(hax)',
]

[package.metadata.docs.rs]
all-features = true
